# debate-bot

./: .gitignore  .pre-commit-config.yaml  BEFORE_AFTER.md  BIDIRECTIONAL_SYNTHESIS.md  CLAUDE.md  FIX_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  SYNTHESIS_DESIGN.md  TESTING_GUIDE.md  UI_TIMING_FIX.md  check.sh  config.yaml  prompt-editor.sh  pyproject.toml  test_brave.py  test_independent_agents.py  test_streaming_fix.py
debate/: __init__.py  article_fetcher.py  card_import.py  case_generator.py  cli.py  config.py  debate_agent.py  evidence_storage.py  evidence_validator.py  interactive_input.py  judge_agent.py  models.py  research_agent.py  round_controller.py  synthesis_agent.py
debate/prep/: __init__.py  base_agent.py  brief_renderer.py  cutter_agent.py  organizer_agent.py  research_vocabulary.py  runner.py  search_agent.py  session.py  strategy_agent.py  ui.py
debate/prompt_editor/: server.py
debate/prompt_editor/static/: app.js  index.html  style.css
debate/prompts/: card_research.md  case_generation.md  case_generation_with_evidence.md  judge_decision.md  prep_orchestration.md  search_query_batch.md  search_query_single.md  speech_generation.md  strategy_answers.md  strategy_impacts.md  strategy_support.md
docs/: SEARCH_AGENT_BUG_REPORT.md  search-agent-improvements.md
evidence/: resolved_the_us_should_ban_tiktok_pro_economic_impacts.json  resolved_the_us_should_ban_tiktok_pro_national_security.json
lessons/: organization.md  research.md  strategy.md
scripts/: debug_ui_timing.py  reproduce_ui_bug.py  test_fixed_ui.py  test_research_directions.py  verify_continuous_ui.py
tests/: __init__.py  simulate_search_agent.py  test_debug_agent.py  test_fixtures_simple.py  test_models.py  test_search_agent_with_fixtures.py  test_streaming_parser.py
tests/fixtures/: README.md  __init__.py
tests/fixtures/articles/: sample_articles.json
tests/fixtures/queries/: sample_queries.json
tests/fixtures/search_results/: sample_results.json
tests/prep/: test_streaming_fix.py  test_ui_display.py
transcripts/: prep_20260203_115942.txt  prep_20260203_143245.txt  prep_20260203_143330.txt  prep_20260203_143413.txt  prep_20260203_144517.txt  prep_20260203_150751.txt  prep_20260203_195336.txt
