[project]
name = "debate-cli"
version = "0.1.0"
description = "A CLI tool for practicing Public Forum debate against an AI opponent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
debate = "debate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debate"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
